[package]
name = "stream-broadcast"
version = "0.2.1"
authors = ["Markus Ineichen <kusi.ineichen@gmail.com>"]
description = "Runtime independent broadcast, which only polls it's underlying stream if no pending data is available"
repository = "https://github.com/mineichen/stream-broadcast-rs"
keywords = ["stream", "broadcast", "shared", "cached", "clone"]
categories = ["asynchronous", "caching", "concurrency"]
readme = "README.md"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
pin-project = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
